# todo

./: .envexample  .gitignore  .gitingore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yaml  init-db.sh  manage.py  pyproject.toml  setup.cfg
apps/common/kafka/: enums.py
apps/todo/: apps.py  authentication.py  exceptions.py  models.py  urls.py  views.py
apps/todo/infra/kafka/: dto.py  producer.py
apps/todo/migrations/: 0001_initial.py
apps/todo/serializers/: task.py
apps/todo/services/: complete_service.py
apps/todo/views/: task.py  user.py
apps/todo_monitor/: .envexample  alembic.ini  config.py  logger.py  main.py  models.py  utils.py
apps/todo_monitor/alembic/: env.py
apps/todo_monitor/alembic/versions/: 2024_10_13_0824-3422fbf5d155_.py  2024_10_13_1508-ac0f61eba29a_.py  2024_10_14_0853-0afa2a5b9d0b_.py  2024_10_14_1002-7d5de9168749_.py
apps/todo_monitor/infra/db/: connection.py  models.py
apps/todo_monitor/infra/kafka/: consumer.py
apps/todo_monitor/infra/repositories/: completed_task.py  info_task.py
apps/todo_monitor/services/: counter_service.py  service_abc.py  task_info_service.py
config/: settings.py  urls.py
config/todo/: settings.py
config/todo_monitor/: settings.py
tests/: utils.py
tests/todo/: conftest.py
tests/todo/api/: test_auth.py  test_task.py
