[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["p.afanasev <p.afanasev@x5.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
drf-spectacular = "^0.27.2"
djoser = "^2.2.3"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = false