[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["p.afanasev <p.afanasev@x5.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
drf-spectacular = "^0.27.2"
djoser = "^2.2.3"
confluent-kafka = "^2.5.3"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.35"
greenlet = "^3.1.1"
aiokafka = "^0.11.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.2"
pytest = "^8.3.3"
mimesis = "^18.0.0"
pytest-django = "^4.9.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"